<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerActivityId"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginProcess.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:scaleX="3"
            android:src="@drawable/mt_fuji" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/register_button_text"
                android:textColor="#222"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/username"
                android:textColorHint="#fff"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextAppearance="?attr/textAppearanceOverline"
                app:hintTextColor="#fff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/password"
                android:textColorHint="#fff"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextAppearance="?attr/textAppearanceOverline"
                app:hintTextColor="#fff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/rpassword"
                android:textColorHint="#fff"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextAppearance="?attr/textAppearanceOverline"
                app:hintTextColor="#fff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatEditText"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/email"
                android:textColorHint="#fff"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextAppearance="?attr/textAppearanceOverline"
                app:hintTextColor="#fff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/name"
                android:textColorHint="#fff"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextAppearance="?attr/textAppearanceOverline"
                app:hintTextColor="#fff">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/nameEditText"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/surname"
                android:textColorHint="#fff"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextAppearance="?attr/textAppearanceOverline"
                app:hintTextColor="#fff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameEditText"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_button_register"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/register_button_text" />

            <Button

                android:id="@+id/login_button_register"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/login_button_text"

                />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
