<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivityId"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    app:menu="@menu/navigation_drawer"

...
        android:textStyle="bold"


        />

    <TextView
        android:id="@+id/kanjiActivityTextViewMain"
        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="150dp"
...
        android:gravity="center"
        android:text="Study \nKanjis"

        />

    <TextView
        android:id="@+id/hiraganaActivityTextViewMain"
        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_alignStart="@+id/kanjiActivityTextViewMain"
        android:gravity="center"
...
        android:text="@string/study_katakana"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/quizActivityTextViewMain"

        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_alignStart="@+id/katakanaActivityTextViewMain"
...
