<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/kanaActivityId"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
...

            android:text="@string/title"
            android:textAlignment="center" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanaTitleDescriptionTypeId"
        style="@style/ItemsStyle"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:hint="@string/hiragana_dictionary"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerKana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"

...
